--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     Login
 </h1>
 
-    <form action="/login" method="post">
+    <form method="post">
         <table>
             <tr>
                 <td>
