Home page added (index.html)

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,7 +5,7 @@
 </form>
 
     <form action="/blog">
-        {% if blog_post|length == 0: %}
+        {% if blog_post|length == 0 %}
 
             {% if posts|length == 0 %}
             
