--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,13 @@
                 -moz-text-align-last: left;
                 text-align-last: left;
             }
+            nav {
+                background-color: lightgray;
+                height: 50px;
+            }
+            body {
+                background-color: lavender;
+            }
 
             .error  { 
                 color: red;
@@ -41,29 +48,54 @@
             }
 
             .single_blog_body{
-                font-size: 25px;            }
+                font-size: 25px;            
+            }
+            .nav_bar{
+                list-style-type: none;
+                margin: 0;
+                padding: 0;
+                display: inline;
+                background-color: #dddddd;
+            }
+            .nav_bar_left{
+                float:left;
+            }
+            .nav_bar_right{
+                float:right;
+            }
+            .active {
+                background-color: #4CAF50;
+            }       
+            a {
+                display: block;
+                padding: 5px;
+            }                
 
+            .nav_links {
+                display: block;
+                padding: 8px;
+            }
         </style>
     </head>
     <body>
         <nav>
-            <ul>
-                <li>
-                    <a href="/"> Home</a>                                                      
+            <ul class="nav_bar">
+                <li class="nav_bar_left">
+                    <a href="/" class="nav_links"> Home</a>                                                      
                 </li>
-                <li>
-                    <a href="/blog"> All Posts</a>                                                      
+                <li class="nav_bar_left">
+                    <a href="/blog" class="nav_links"> All Posts</a>                                                      
                 </li>
-                <li>
-                    <a href="/newpost"> New Post</a>                                                      
+                <li class="nav_bar_left">
+                    <a href="/newpost" class="nav_links"> New Post</a>                                                      
                 </li>
             </ul>
-            <ul>
-                <li>
-                    <a href="/login"> Login </a>                                                      
+            <ul class="nav_bar">
+                <li class="nav_bar_right">
+                    <a href="/logout" class="nav_links"> Logout </a>                                                      
                 </li>
-                <li>
-                    <a href="/logout"> Logout </a>                                                      
+                <li class="nav_bar_right">
+                    <a href="/login"  class="nav_links"> Login </a>                                                      
                 </li>
             </ul>
         </nav>
